--- a/kadai3-4.html
+++ b/kadai3-4.html
@@ -24,15 +24,27 @@
 
                 // 配列の内容を項目毎に出力
                 items.forEach(item => {
-                    console.log(`商品番号: ${item.id}, 商品名: ${item.name}, 金額: ${item.price}, 在庫数: ${item.stock}`);
+			console.log(`商品番号: ${item.id}, 商品名: ${item.name}, 金額: ${item.price}, 在庫数: ${item.stock}`);
                 });
-
                 console.log(""); // 空行の出力
             }
 
             // 商品購入の関数
             function buyItem(no) {
-                // ここにコードを書く
+                const item = items.find(item => item.id === no); // 商品番号に一致する商品を検索
+
+                if (!item) {
+                    console.log(`${no}は無効な商品番号です。番号は1～${items.length}で指定してください。`);
+                    return;
+                }
+
+                if (item.stock > 0) {
+                    // 購入処理
+                    item.stock--;
+                    console.log(`商品番号: ${item.id}, 商品名: ${item.name}を購入します。`);
+                } else {
+                    console.log(`商品番号: ${item.id}, 商品名: ${item.name}は在庫がありません。`);
+                }
                 showItemList(); // 商品一覧の表示関数呼び出し
             }
 
